Update package versions in requirements.txt
Updated versions of pillow, pyinstaller, pyarmor, and setuptools.

Signed-off-by: Bubbles The Dev <152947339+KernFerm@users.noreply.github.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 customtkinter==5.2.2
 requests==2.32.5
-pillow
-pyinstaller==6.16.0
+pillow==12.1.1
+pyinstaller==6.18.0
 tkinterdnd2==0.4.3
-pyarmor==9.1.9
-setuptools==80.9.0
+pyarmor==9.2.3
+setuptools==82.0.0
